src/objects/Sales_Team_Hierarchy_AE__c.object
<CustomObject>
    <fields>
        <fullName>AE_Code__c</fullName>
        <label>AE Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <label>AE Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Adjusted_Target__c</fullName>
        <formula>Q1_Adjusted_Target__c + Q2_Adjusted_Target__c + Q3_Adjusted_Target__c + Q4_Adjusted_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Adjusted Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Hierarchy Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q1_Adjusted_Target__c</fullName>
        <label>Q1 Adjusted Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Adjusted_Target__c</fullName>
        <label>Q2 Adjusted Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Adjusted_Target__c</fullName>
        <label>Q3 Adjusted Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <referenceTo>Sales_Team_Hierarchy_ST__c</referenceTo>
        <relationshipLabel>Sales Team Hierarchy - AE&apos;s</relationshipLabel>
        <relationshipName>Sales_Team_Hierarchy_AE_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_PeopleSoft_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid PeopleSoft Id</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Team Hierarchy - AE</label>
    <nameField>
        <label>Sales Team Hierarchy - AE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Hierarchy - AE&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>